<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/productname"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/openBalance"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/openingbalance"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/stockAddition"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/stockaddition"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/orderDelivered"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/orderdelivered"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
        <TextView
            android:id="@+id/closingBalance"
            android:layout_width="@dimen/activity_margin_100"
            android:layout_height="wrap_content"
            android:text="@string/closingbalance"
            android:gravity="center"
            android:padding="@dimen/activity_margin_4"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_300"
            />
    </LinearLayout>
</LinearLayout>