<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:layout_margin="@dimen/activity_margin_6"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1.3"
      android:orientation="vertical"
      >
      <com.ortusolis.evenkart.Utility.SquareImageView
          android:id="@+id/picture"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:transitionName="@string/objectimage"
          android:src="@drawable/water1"
          android:scaleType="centerCrop"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical"
      android:gravity="center"
      >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/order"
    android:textStyle="bold"
    android:textColor="@color/textColorDark"
    />
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/activity_margin_4"
    android:text="@string/orderplaceddate"
    android:textColor="@color/textColor"
    />
      <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_margin_8"
    android:text="@string/quantity"
    android:textColor="@color/textColor"
    />
      <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_margin_8"
    android:text="@string/returnquan"
    android:textColor="@color/textColor"
    />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/amount"
          android:textStyle="bold"
          android:textColor="@color/textColorDark"
          />
  </LinearLayout>

  </LinearLayout>

</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:layout_margin="@dimen/activity_margin_6"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin_8"
            >
            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_margin_8"
                    android:text="@string/deliverytime"
                    android:textColor="@color/textColorDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deliveryTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deliverytime"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_margin_6"
                android:layout_marginBottom="@dimen/activity_margin_6"
                android:background="@color/light_gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_margin_8"
                    android:text="@string/deliverydate"
                    android:textColor="@color/textColorDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deliveryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selectdeliverydate"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_margin_6"
                android:layout_marginBottom="@dimen/activity_margin_6"
                android:background="@color/light_gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_margin_8"
                    android:text="@string/assignemployee"
                    android:textColor="@color/textColorDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/employee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selectemployee"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:padding="@dimen/activity_margin_8"
                    android:textColor="@color/colorPrimary"
                    />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/orderDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/activity_margin_10"
            >
            <Button
                android:id="@+id/generate_Bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_margin_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/borderless_button"
                android:layout_margin="@dimen/activity_margin_10"
                android:text="Generate Bill"
                />
            <Button
                android:id="@+id/order_delivered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_margin_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/borderless_button"
                android:layout_margin="@dimen/activity_margin_10"
                android:text="Order Delivered"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>