<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin_4"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardBackgroundColor="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <com.ortusolis.evenkart.Utility.SquareImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/objectimage"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/objectname"
        android:paddingLeft="@dimen/activity_margin_10"
        android:paddingRight="@dimen/activity_margin_10"
        android:paddingTop="@dimen/activity_margin_6"
        android:paddingBottom="@dimen/activity_margin_6"
        android:textColor="@color/textColor"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="object_description"
        android:maxLines="2"
        android:ellipsize="end"
        android:paddingLeft="@dimen/activity_margin_10"
        android:paddingRight="@dimen/activity_margin_10"
        android:paddingTop="@dimen/activity_margin_6"
        android:paddingBottom="@dimen/activity_margin_6"
        android:layout_marginBottom="@dimen/activity_margin_10"
        android:textColor="@color/gray"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</FrameLayout>