<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_margin_28"
            android:layout_marginRight="@dimen/activity_margin_28"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:layout_marginTop="@dimen/activity_margin_48"
                android:layout_marginLeft="@dimen/activity_margin_10"
                android:layout_marginRight="@dimen/activity_margin_10"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35dp"
                android:padding="@dimen/activity_margin_8"
                />
            <EditText
                android:id="@+id/enterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:layout_margin="@dimen/activity_margin_10"
                android:hint="@string/enterphone_number"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_xlarge"
                android:inputType="phone"
                android:background="@drawable/border_light_grey"
                android:padding="@dimen/activity_margin_8"
                android:textColorHint="@color/gray"
                />
            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:gravity="center"
                android:textAllCaps="false"
                android:background="@drawable/borderless_button"
                android:layout_margin="@dimen/activity_margin_10"
                android:text="@string/submit"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>